--- a/templates/result.html
+++ b/templates/result.html
@@ -15,6 +15,7 @@
 				  	<form class="form-group" method="POST">
 				  		<select id="college" class="form-control" name="college" onchange="this.form.submit()">
 							<option value="">----- Select College -----</option>
+							<option value="___">----- Overall -----</option>
 							<option value="001">Acharya Narendra Dev College-(001)</option>
 							<option value="003">Atma Ram Sanatan Dharam College-(003)</option>
 							<option value="009">Bhaskaracharya College of Applied Sciences-(009)</option>
